[package]
name = "rim_mod_translate_downloader"
version = "0.1.0"
authors = ["ansark"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
os_info = "3.0"
reqwest = "0.11.1"
tempfile = "3.2.0"
url = "2.2.1"
tokio = { version = "1", features = ["full"] }